# slack-scaffold-python

./: README.md  main.py  pyproject.toml
app/: main.py
