[tool.poetry]
name = "slack-scaffold-python"
version = "0.1.0"
description = ""
authors = ["TatchNicolas <TatchNicolas@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
slack-bolt = "^1.6.1"

[tool.poetry.dev-dependencies]
watchdog = {extras = ["watchmedo"], version = "^2.1.2"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
